# illumiterm

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  illumiterm.desktop
src/: Makefile.am  illumiterm.c
